fix: resolve layout issue

--- a/app/styles/screen.css
+++ b/app/styles/screen.css
@@ -90,6 +90,7 @@ production stylesheet in assets/built/screen.css
     .home-template .post-feed,
     .tag-template .post-feed,
     .author-template .post-feed {
+        margin-top: -70px;
         padding-top: 0;
     }
     .home-template .site-nav {
